--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,6 +6,9 @@
 # ┌──────────────────────────────────────────────────────────────────────────────┐
 # │                              MONITOR SETUP                                    │
 # └──────────────────────────────────────────────────────────────────────────────┘
+# Auto-detection: questo verrà configurato automaticamente dallo script di install
+# Se vuoi configurare manualmente, decommenta e modifica:
+# monitor=DP-1,2560x1440@144,0x0,1
 monitor=,preferred,auto,1
 
 # ┌──────────────────────────────────────────────────────────────────────────────┐
@@ -254,6 +257,7 @@ bind = $mainMod SHIFT, F, fullscreen, 1
 bind = $mainMod, T, togglefloating
 bind = $mainMod, P, pseudo
 bind = $mainMod, J, togglesplit
+bind = $mainMod, K, swapwindow, l
 bind = $mainMod, G, togglegroup
 bind = $mainMod, Tab, changegroupactive, f
 
