--- a/swaync/config.json
+++ b/swaync/config.json
@@ -9,13 +9,10 @@
     
     "control-center-layer": "top",
     "control-center-positionX": "center",
-    "control-center-margin-top": 50,
-    "control-center-margin-bottom": 50,
     "control-center-margin-right": 0,
     "control-center-margin-left": 0,
     "control-center-width": 400,
-    "control-center-height": 450,
-    "control-center-exclusive-zone": false,
+    "control-center-height": 800,
     
     "notification-window-width": 400,
     "notification-icon-size": 48,
@@ -27,7 +24,6 @@
     "timeout-critical": 0,
     
     "fit-to-screen": false,
-    "relative-timestamps": true,
     "hide-on-clear": false,
     "hide-on-action": true,
     "script-fail-notify": true,
@@ -57,14 +53,12 @@
             "text": "Do Not Disturb"
         },
         "mpris": {
-            "image-size": 96,
-            "image-radius": 12
+            "image-size": 32,
+            "image-radius": 8
         },
         "volume": {
             "label": "󰕾",
-            "show-per-app": true,
-            "show-per-app-icon": true,
-            "show-per-app-label": false
+            "show-per-app": true
         },
         "buttons-grid": {
             "actions": [
