--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -5,7 +5,7 @@
     "spacing": 0,
     "modules-left": ["hyprland/workspaces", "hyprland/window"],
     "modules-center": ["custom/notification", "clock"],
-    "modules-right": ["tray", "pulseaudio", "network", "bluetooth", "battery", "custom/power"],
+    "modules-right": ["tray", "pulseaudio", "network", "bluetooth", "cpu", "memory", "custom/power"],
 
     "hyprland/workspaces": {
         "format": "{icon}",
@@ -110,6 +110,27 @@
         "on-click": "blueman-manager"
     },
 
+    "custom/notification": {
+        "tooltip": false,
+        "format": "{icon}",
+        "format-icons": {
+            "notification": "󰂚<span foreground='#e06c75'><sup></sup></span>",
+            "none": "󰂜",
+            "dnd-notification": "󰂛<span foreground='#e06c75'><sup></sup></span>",
+            "dnd-none": "󰂛",
+            "inhibited-notification": "󰂚<span foreground='#e06c75'><sup></sup></span>",
+            "inhibited-none": "󰂜",
+            "dnd-inhibited-notification": "󰂛<span foreground='#e06c75'><sup></sup></span>",
+            "dnd-inhibited-none": "󰂛"
+        },
+        "return-type": "json",
+        "exec-if": "which swaync-client",
+        "exec": "swaync-client -swb",
+        "on-click": "swaync-client -t -sw",
+        "on-click-right": "swaync-client -d -sw",
+        "escape": true
+    },
+
     "battery": {
         "states": {
             "good": 95,
@@ -136,27 +157,6 @@
         "format": "󰍛 {percentage}%",
         "tooltip-format": "RAM: {used:0.1f}GB / {total:0.1f}GB",
         "on-click": "kitty -e btop"
-    },
-
-    "custom/notification": {
-        "tooltip": false,
-        "format": "{icon}",
-        "format-icons": {
-            "notification": "󰂚<span foreground='#e06c75'><sup></sup></span>",
-            "none": "󰂜",
-            "dnd-notification": "󰂛<span foreground='#e06c75'><sup></sup></span>",
-            "dnd-none": "󰂛",
-            "inhibited-notification": "󰂚<span foreground='#e06c75'><sup></sup></span>",
-            "inhibited-none": "󰂜",
-            "dnd-inhibited-notification": "󰂛<span foreground='#e06c75'><sup></sup></span>",
-            "dnd-inhibited-none": "󰂛"
-        },
-        "return-type": "json",
-        "exec-if": "which swaync-client",
-        "exec": "swaync-client -swb",
-        "on-click": "swaync-client -t -sw",
-        "on-click-right": "swaync-client -d -sw",
-        "escape": true
     },
 
     "custom/power": {
